# VideoTrans

./: README.md  client.py  host.py  video_config.txt  video_info.txt  说明.txt
test/: host.cpp~
test (copy)/client/: client.cpp
test (copy)/host/: CMakeLists.txt  host.cpp
test/client/: CMakeLists.txt  client (backup).cpp  client.cpp~
test/host/: host(backup).cpp  host.cpp  host.cpp~
test/timedelay/client/: client.cpp  client.cpp~
test/timedelay/host/: host.cpp  host.cpp~
test/timedelay2/: client.txt  host.txt
test/timedelay2/client/: client.cpp~
test/timedelay2/host/: host.cpp  host.cpp~
test1/: 说明.txt
test1/client/: SocketClientMat.cpp  SocketMatTransmissionClient.cpp  SocketMatTransmissionClient.h
test1/client2/: CMakeLists.txt  SocketClientMat.cpp
test1/host/: CMakeLists.txt  SocketMatTransmissionServer.cpp  SocketMatTransmissionServer.h  SocketServerMat.cpp
test2/: client.py  server.py
test_c_c++/client/: CMakeLists.txt  client_c.c  client_c.cpp  main.cpp
test_c_c++/host/: CMakeLists.txt  host.cpp  host_c.c  host_c.cpp  main.cpp
threadtcp/client/: CMakeLists.txt
threadtcp/client2/: client.cpp
threadtcp/host/: CMakeLists.txt  host.cpp
多客户端连接测试（非图像）/client/: client.cpp
